--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="col-12 col-lg col-md-12">
               <div class="text-wrapper align-left">
                 <h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Sobre mi</strong></h1>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Soy Genesis Miller, una apasionada artesana especializada en crear productos únicos y coleccionables hechos de crochet e hilo. En cada pieza busca fusionar la tradición artesanal con un toque moderno y personalizado, cuidando minuciosamente los detalles para asegurar la máxima calidad. Mi dedicación a esta forma de arte no es sólo una artesanía, sino una forma de expresar creatividad y amor por las cosas hechas a mano.<br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-7">Soy Genesis Miller, una apasionada artesana especializada en crear productos únicos y coleccionables hechos de crochet y trapillo. En cada pieza busca fusionar la tradición artesanal con un toque moderno y personalizado, cuidando minuciosamente los detalles para asegurar la máxima calidad. Mi dedicación a esta forma de arte no es sólo una artesanía, sino una forma de expresar creatividad y amor por las cosas hechas a mano.<br>
                 </p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-info display-7" href="http://wa.me/17187570159">contactame</a></div>
               </div>
