--- a/amigurumis.html
+++ b/amigurumis.html
@@ -89,7 +89,7 @@
 							$45.000
 						</h6>
 						
-						<div class="mbr-section-btn item-footer"><a href="" class="btn item-btn btn-primary display-7">Ordenar</a></div>
+						<div class="mbr-section-btn item-footer"><a href="https://wa.me/17187570159" class="btn item-btn btn-primary display-7">Ordenar</a></div>
 					</div>
 
 				</div>
