--- a/moda.html
+++ b/moda.html
@@ -81,8 +81,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.50-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.50-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -90,8 +90,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7"><div>$75.000</div>Cartera Mocca<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.51-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.51-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -99,8 +99,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7">$130.000<br>Bolso de Trapillo<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -108,8 +108,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7">$115.000<br>Top Adorno Floral<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-1-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-1-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -117,8 +117,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7">$85.000<br>Bolso Baby Blue<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-2-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-2-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -126,8 +126,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7">$120.000<br>Top Khakis<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <a href="http://wa.me/17187570159"><img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-3-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></a>
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <a href="http://wa.me/17187570159"><img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.52-pm-3-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></a>
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -135,8 +135,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7">$100.000<br>Top Rainbow<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.53-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.53-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -144,8 +144,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-0 mt-3 display-7">$115.000<br>Top Fresita<br><a href="http://wa.me/17187570159" class="text-primary"><strong>Comprar</strong></a></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufU9AaVmJS-modal" data-bs-target="#ufU9AaVmJS-modal">
-                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.54-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS">
+                <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal" data-target="#ufUbQqTvaW-modal" data-bs-target="#ufUbQqTvaW-modal">
+                    <img class="w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.54-pm-506x506.jpg" alt="Mobirise Website Builder" data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -154,11 +154,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ufU9AaVmJS-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ufUbQqTvaW-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-ufU9AaVmJS" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-ufUbQqTvaW" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/whatsapp-image-2024-06-16-at-4.07.50-pm-506x506.jpg" alt="Mobirise Website Builder">
@@ -186,22 +186,22 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
-                                <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ufU9AaVmJS" data-bs-target="#lb-ufU9AaVmJS"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
+                                <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ufUbQqTvaW" data-bs-target="#lb-ufUbQqTvaW"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-ufU9AaVmJS">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-ufUbQqTvaW">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-ufU9AaVmJS">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-ufUbQqTvaW">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
